--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "com.example.david.myapplication"
+        applicationId "com.example.david.CrossIt"
         minSdkVersion 23
         targetSdkVersion 24
         versionCode 1
@@ -19,10 +19,14 @@ android {
     }
 }
 
+
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
+
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
